--- a/todoDiary/Base.lproj/Main.storyboard
+++ b/todoDiary/Base.lproj/Main.storyboard
@@ -211,16 +211,27 @@
                         <outlet property="idTextField" destination="gN8-w8-RiB" id="PXS-Bm-073"/>
                         <outlet property="loginBtn" destination="geT-kZ-wmc" id="k3Y-O4-548"/>
                         <outlet property="passwordTextField" destination="uMT-gg-CYD" id="Jbq-vS-yCT"/>
+                        <segue destination="9IR-w8-VcZ" kind="push" identifier="TodoView" id="t92-pP-S7X"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="YtA-8f-3xE" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1421.7391304347827" y="79.6875"/>
         </scene>
+        <!--TodoView-->
+        <scene sceneID="aMX-MZ-Yqy">
+            <objects>
+                <viewControllerPlaceholder storyboardIdentifier="TodoView" referencedIdentifier="TodoView" id="9IR-w8-VcZ" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="HLE-5q-f1Y"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="IPX-xr-Fjc" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1969" y="198"/>
+        </scene>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="todoDiary" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="MainView" id="BYZ-38-t0r" customClass="ViewController" customModule="todoDiary" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -295,7 +306,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="28.985507246376812" y="79.6875"/>
+            <point key="canvasLocation" x="16" y="80"/>
         </scene>
     </scenes>
     <resources>
