NewAccount& Login _ firebase에  데이터로 추가하기

--- a/todoDiary/Base.lproj/Main.storyboard
+++ b/todoDiary/Base.lproj/Main.storyboard
@@ -221,7 +221,7 @@
         <!--TodoView-->
         <scene sceneID="aMX-MZ-Yqy">
             <objects>
-                <viewControllerPlaceholder storyboardIdentifier="TodoView" referencedIdentifier="TodoView" id="9IR-w8-VcZ" sceneMemberID="viewController">
+                <viewControllerPlaceholder storyboardIdentifier="TodoView" storyboardName="Todo" referencedIdentifier="TodoView" id="9IR-w8-VcZ" sceneMemberID="viewController">
                     <navigationItem key="navigationItem" id="HLE-5q-f1Y"/>
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="IPX-xr-Fjc" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
