--- a/todoDiary/Main.storyboard
+++ b/todoDiary/Main.storyboard
@@ -105,23 +105,10 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="Hgz-ce-B0c">
-                                                    <rect key="frame" x="240" y="0.0" width="160" height="80"/>
+                                                    <rect key="frame" x="320" y="0.0" width="80" height="80"/>
                                                     <subviews>
-                                                        <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UnA-mm-0xS">
-                                                            <rect key="frame" x="0.0" y="0.0" width="80" height="80"/>
-                                                            <color key="backgroundColor" red="0.1764705882" green="0.1764705882" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                                            <constraints>
-                                                                <constraint firstAttribute="width" secondItem="UnA-mm-0xS" secondAttribute="height" multiplier="5:5" id="pPe-Oy-bBz"/>
-                                                            </constraints>
-                                                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                            <state key="normal" title="Button"/>
-                                                            <buttonConfiguration key="configuration" style="plain">
-                                                                <imageReference key="image" image="pencil" catalog="system" symbolScale="large"/>
-                                                                <preferredSymbolConfiguration key="preferredSymbolConfigurationForImage" configurationType="pointSize" pointSize="18" scale="large"/>
-                                                            </buttonConfiguration>
-                                                        </button>
                                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="s15-Xp-elD">
-                                                            <rect key="frame" x="80" y="0.0" width="80" height="80"/>
+                                                            <rect key="frame" x="0.0" y="0.0" width="80" height="80"/>
                                                             <color key="backgroundColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="width" secondItem="s15-Xp-elD" secondAttribute="height" multiplier="1:1" id="YU0-BE-XvX"/>
@@ -132,6 +119,9 @@
                                                                 <imageReference key="image" image="trash" catalog="system" symbolScale="large"/>
                                                                 <preferredSymbolConfiguration key="preferredSymbolConfigurationForImage" configurationType="pointSize" pointSize="18" scale="large"/>
                                                             </buttonConfiguration>
+                                                            <connections>
+                                                                <action selector="didDelete:" destination="Lpp-yl-fcN" eventType="touchUpInside" id="2aH-SQ-FrK"/>
+                                                            </connections>
                                                         </button>
                                                     </subviews>
                                                 </stackView>
@@ -144,14 +134,15 @@
                                                             <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
-                                                        <button opaque="NO" alpha="0.90000000000000002" contentMode="scaleAspectFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tMT-cM-DeJ">
+                                                        <button opaque="NO" alpha="0.90000000000000002" contentMode="scaleAspectFill" selected="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tMT-cM-DeJ">
                                                             <rect key="frame" x="10" y="29" width="19.5" height="22"/>
-                                                            <color key="tintColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                            <color key="tintColor" systemColor="tintColor"/>
                                                             <state key="normal">
                                                                 <color key="titleColor" red="0.039215686274509803" green="0.10588235294117647" blue="0.22352941176470587" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                                 <imageReference key="image" image="square" catalog="system" symbolScale="medium"/>
                                                                 <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="medium" weight="medium"/>
                                                             </state>
+                                                            <state key="selected" image="checkmark.square.fill" catalog="system"/>
                                                             <connections>
                                                                 <action selector="didTodo:" destination="Lpp-yl-fcN" eventType="touchUpInside" id="4gI-WH-q9F"/>
                                                             </connections>
@@ -238,7 +229,6 @@
                                             <outlet property="deleteBtn" destination="s15-Xp-elD" id="hFE-cw-m3g"/>
                                             <outlet property="star" destination="b4N-IE-slC" id="iq2-2a-uQg"/>
                                             <outlet property="swipeBox" destination="Hgz-ce-B0c" id="oIc-cS-FfO"/>
-                                            <outlet property="updateBtn" destination="UnA-mm-0xS" id="H7w-tL-gEX"/>
                                         </connections>
                                     </collectionViewCell>
                                 </cells>
@@ -250,13 +240,13 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wQh-ER-l8X">
                                 <rect key="frame" x="0.0" y="753" width="414" height="60"/>
                                 <subviews>
-                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="m3D-sq-eAk">
+                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="오늘 할일은..." textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="m3D-sq-eAk">
                                         <rect key="frame" x="15" y="13" width="308.5" height="34"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="34" id="VCA-jQ-k5u"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits"/>
+                                        <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" smartDashesType="no" smartInsertDeleteType="no" smartQuotesType="no"/>
                                     </textField>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AoY-Ao-PT3">
                                         <rect key="frame" x="369" y="15" width="30" height="30"/>
@@ -265,6 +255,9 @@
                                         <state key="normal" title="입력">
                                             <color key="titleColor" systemColor="tintColor"/>
                                         </state>
+                                        <connections>
+                                            <action selector="tapAddTaskButton:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="27x-cc-r2u"/>
+                                        </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleAspectFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="F05-Tm-b1q">
                                         <rect key="frame" x="338.5" y="19" width="20.5" height="22"/>
@@ -275,6 +268,9 @@
                                                 <fontDescription key="fontDescription" style="UICTFontTextStyleCallout"/>
                                             </preferredSymbolConfiguration>
                                         </state>
+                                        <connections>
+                                            <action selector="tapCalendarButton:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="IeG-OC-ShA"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                                 <color key="backgroundColor" red="0.89019607840000003" green="0.94509803920000002" blue="0.98823529409999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -292,6 +288,7 @@
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" red="0.8901960784313725" green="0.94509803921568625" blue="0.9882352941176471" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <gestureRecognizers/>
                         <constraints>
                             <constraint firstItem="Wd1-HR-7lg" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="20" id="5Dx-Gc-GZQ"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="t6g-Ii-WFL" secondAttribute="trailing" id="6fh-J5-ho3"/>
@@ -305,15 +302,27 @@
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="wQh-ER-l8X" secondAttribute="bottom" id="otG-jl-dW0"/>
                             <constraint firstItem="Wd1-HR-7lg" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="17" id="qLZ-qz-pu8"/>
                         </constraints>
+                        <connections>
+                            <outletCollection property="gestureRecognizers" destination="qSF-tl-7Nu" appends="YES" id="rwO-16-4Zr"/>
+                        </connections>
                     </view>
                     <tabBarItem key="tabBarItem" title="Todo" id="PW1-yh-q6t">
                         <color key="badgeColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBarItem>
                     <connections>
+                        <outlet property="addBtn" destination="AoY-Ao-PT3" id="9FI-He-Ltp"/>
+                        <outlet property="calendarBtn" destination="F05-Tm-b1q" id="9he-75-HQI"/>
+                        <outlet property="inputTextField" destination="m3D-sq-eAk" id="1wH-6e-GaA"/>
+                        <outlet property="inputViewBottom" destination="otG-jl-dW0" id="xVG-cd-r42"/>
                         <outlet property="todoCollectionVIew" destination="t6g-Ii-WFL" id="iQG-CW-ClB"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <tapGestureRecognizer id="qSF-tl-7Nu">
+                    <connections>
+                        <action selector="tapBG:" destination="Y6W-OH-hqX" id="Mva-sZ-tkj"/>
+                    </connections>
+                </tapGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="-686.95652173913049" y="845.75892857142856"/>
         </scene>
@@ -342,7 +351,7 @@
     <resources>
         <image name="bell" catalog="system" width="128" height="124"/>
         <image name="calendar" catalog="system" width="128" height="106"/>
-        <image name="pencil" catalog="system" width="128" height="113"/>
+        <image name="checkmark.square.fill" catalog="system" width="128" height="114"/>
         <image name="square" catalog="system" width="128" height="114"/>
         <image name="star" catalog="system" width="128" height="116"/>
         <image name="trash" catalog="system" width="121" height="128"/>
